# Robotics_export

./: .gitignore  .gitmodules  COURSE_PROJECT.md  README.md  STAGE2_SYSTEM_SOLUTION_2026.md  config.toml  test_stage3_features.py
deliverables/: artifact_manifest.txt  robotics_experiment_template.xlsx  robotics_option_a_final_report_draft.docx  robotics_option_a_midterm_deck.pptx
docs/: COMMIT_CHANGES_2026-05-14.md  ai_tools_usage.md  evaluation_protocol.md  midterm_completion_progress.md  midterm_presentation_outline.md  office_experiment_report.md  office_migration.md  office_stage2_update_summary.md  office_stage3_feature_test_summary.md  option_a_system_design.md  sim_to_real_analysis.md  stage2_experiment_to_report_workflow.md  stage2_midterm_report.md  stage3_final_report.md
experiment_results/llm/: inputs.txt
experiment_results/real_midterm/: office_delivery_configured_collision_monitor.csv  office_delivery_configured_collision_monitor.jsonl  office_patrol_configured_collision_monitor.csv  office_patrol_configured_collision_monitor.jsonl  warehouse_delivery_configured_collision_monitor.csv  warehouse_delivery_configured_collision_monitor.jsonl  warehouse_patrol_configured_collision_monitor.csv  warehouse_patrol_configured_collision_monitor.jsonl
experiment_results/stage2_matrix/: office_delivery-patrol_navfn_astar_baseline_costmap.csv  office_delivery-patrol_navfn_astar_baseline_costmap.jsonl  office_delivery-patrol_navfn_astar_collision_monitor.csv  office_delivery-patrol_navfn_astar_collision_monitor.jsonl  office_delivery-patrol_smac_2d_baseline_costmap.csv  office_delivery-patrol_smac_2d_baseline_costmap.jsonl  office_delivery-patrol_smac_2d_collision_monitor.csv  office_delivery-patrol_smac_2d_collision_monitor.jsonl  stage2_matrix_summary.csv  stage2_matrix_summary.md
experiment_results/summary/: llm_summary.json  nav_summary.csv
office/: CMakeLists.txt  package.xml
office/analysis/: office_planning_analysis.py
office/launch/: office.launch.xml  office_perception_mapping.launch.xml
office/scripts/: dispatch_clean  dispatch_delivery  dispatch_patrol  gui_clean_test  gui_delivery_test  gui_patrol_test  office_dynamic_obstacle_avoidance.py  office_experiment.py  office_llm_command.py  office_scan_mapper.py  office_status  office_synthetic_lidar.py  office_task_scheduler.py
office_assets/: CHANGELOG.rst  CMakeLists.txt  package.xml
office_assets/hooks/: office_assets.dsv.in
office_demos/: CHANGELOG.rst  CMakeLists.txt  QUALITY_DECLARATION.md  README.md  package.xml
office_demos/launch/: common.launch.xml  office.launch.xml  office_mock_traffic_light.launch.xml
office_demos/sros2/: office.params.yaml  office_deploy.bash
office_fleet_adapter/: CHANGELOG.rst  README.md  package.xml  setup.cfg  setup.py
office_fleet_adapter/launch/: fleet_adapter.launch.xml
office_fleet_adapter/office_fleet_adapter/: RobotClientAPI.py  RobotCommandHandle.py  fleet_adapter.py  fleet_manager.py
office_gz/: CHANGELOG.rst  CMakeLists.txt  QUALITY_DECLARATION.md  README.md  package.xml
office_gz/launch/: office.launch.xml  office_mock_traffic_light.launch.xml  simulation.launch.xml
office_maps/: CMakeLists.txt  package.xml
office_tasks/: CHANGELOG.rst  QUALITY_DECLARATION.md  README.md  package.xml  setup.cfg  setup.py
office_tasks/office_tasks/: __init__.py  dispatch_action.py  dispatch_clean.py  dispatch_delivery.py  dispatch_dynamic_event.py  dispatch_go_to_place.py  dispatch_patrol.py  dispatch_teleop.py
robotics_description/: CMakeLists.txt  package.xml
robotics_description/launch/: robotics_description.launch.py  robotics_gazebo.launch.py
robotics_description/urdf/: robotics.urdf.xacro
robotics_gazebo/: AWS_REUSE_NOTES.md  CMakeLists.txt  package.xml
robotics_launcher/: robotics_launcher.yaml  start_robotics_wsl.sh
robotics_localization/: CMakeLists.txt  package.xml
robotics_nav2/: CMakeLists.txt  package.xml
robotics_nav2/launch/: indoor_delivery.launch.py  nav2_gazebo.launch.py
robotics_nav2/map/: hotel_map.pgm  hotel_map.yaml  hotel_topology.yaml  office_map.yaml  office_topology.yaml  warehouse_map.pgm  warehouse_map.yaml  warehouse_topology.yaml
robotics_nav2/param/: hotel_nav2.yaml  office_nav2.yaml  office_stage2_demo.yaml  warehouse_nav2.yaml  warehouse_stage2_demo.yaml
robotics_nav2/rviz/: nav2.rviz  office_nav2_lite.rviz  warehouse_nav2_lite.rviz
robotics_nav2/scripts/: generate_nav2_profile.py
robotics_scenario/: CMakeLists.txt  package.xml
robotics_scenario/apps/: robotics_scenario_node.cpp
robotics_scenario/behavior_trees/: hotel_delivery.xml  office_delivery.xml  office_demo.xml  office_patrol.xml  warehouse_delivery.xml  warehouse_demo.xml  warehouse_patrol.xml
robotics_scenario/include/robotics_scenario/: robotics_scenario.hpp
robotics_scenario/include/robotics_scenario/plugins/: navigate_pose_action_node.hpp
robotics_scenario/include/robotics_scenario/scenario/: delivery_scenario.hpp  scenario.hpp
robotics_scenario/launch/: robotics_scenario.launch.py
robotics_scenario/param/: hotel_semantic_goals.yaml  office_semantic_goals.yaml  scenario_param.yaml  warehouse_semantic_goals.yaml
robotics_scenario/plugins/: navigate_pose_action_node.cpp
robotics_scenario/scripts/: _course_task_utils.py  course_experiment_runner.py  course_llm_command.py  course_nl_command.py  course_task_dispatcher.py
robotics_scenario/src/: robotics_scenario.cpp
robotics_scenario/src/scenario/: delivery_scenario.cpp
robotics_scenario/test/: tutorial_test.cpp
stage2_experiment/: EXPERIMENT_HANDOFF.md  WORKFLOW.md  run_llm_eval.sh  run_stage2_experiments.sh  summarize_stage2_results.py
tools/: build_course_artifacts.py  fill_experiment_workbook.py  minimal_stage2_test.sh  patch_wsl_robotics_gazebo.py  profile_test.sh  run_full_experiment.sh  run_midterm_wsl_experiments.sh  run_office_gui_clean_wsl.sh  run_office_gui_delivery_wsl.sh  run_office_gui_patrol_wsl.sh  run_smoke_lfn.sh  run_stage2_demo_wsl.sh  run_stage2_experiments_wsl.sh  smoke_test_wsl.sh  test_baseline.sh  test_compare.sh  validate_stage2_demo.py
(+88 files in other folders)
