<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>office</name>
  <version>0.1.0</version>
  <description>Course-facing launch and task wrappers for the imported Office scene.</description>

  <maintainer email="msd030428@gmail.com">KDW</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>office_gz</exec_depend>
  <exec_depend>office_tasks</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
